force-app/main/default/objects/SBQQ__ProductOption__c/fields/Image_Height__c.field-meta.xml
<CustomField>
    <fullName>Image_Height__c</fullName>
    <label>Image Height</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>